# axi_stream_array_sum_microblaze

./: .gitignore  .peers.ini  .vitisWorkspace.json  common.hpp
.theia/: settings.json
axi_stream_adder/: .gitignore  axi_stream_adder.cpp  axi_stream_adder.hpp  compile_commands.json  hls_config.cfg  vitis-comp.json
axi_stream_adder/axi_stream_adder/: hash-map.txt
classic_ws/hw_def_design_wrapper/: platform.spr  platform.tcl
classic_ws/hw_def_design_wrapper/hw/: hw_def_design_wrapper.xsa
classic_ws/main_app/: main_app.prj
classic_ws/main_app/_ide/: hwspec.checksum
classic_ws/main_app/src/: main.c
classic_ws/main_app_system/: main_app_system.sprj
debouncer/debouncer/: hash-map.txt
decimal_digit_splitter/decimal_digit_splitter/: hash-map.txt
edge_detector/edge_detector/: hash-map.txt
four_digit_7_seg_driver/four_digit_7_seg_driver/: hash-map.txt
hw_def_vivado/: hw_def_design_wrapper.xsa  hw_def_vivado.xpr
hw_def_vivado/hw_def_vivado.hw/backup/: hw_ila_data_1.ila
hw_def_vivado/hw_def_vivado.hw/hw_1/: hw.xml
hw_def_vivado/hw_def_vivado.runs/impl_1/: debug_nets.ltx  (+1 more)
main_app/: .gitignore  vitis-comp.json
main_app/_ide/: hwspec.checksum
main_app/src/: CMakeLists.txt  MainApp.cmake  app.yaml  compile_commands.json  lscript.ld  main.c
main_system_project/: CMakeLists.txt  vitis-sys.json
main_system_project/_ide/: hwspec.checksum
microblaze_platform/: vitis-comp.json
microblaze_platform/hw/sdt/drivers/axi_stream_adder_v1_0/src/: CMakeLists.txt  xaxi_stream_adder_hw.h
seg_driver_clock_divider/seg_driver_clock_divider/: hash-map.txt
(+96 files in other folders)
